--- a/examples/ioc_threat_hunt/ioc_hunt_report.ipynb
+++ b/examples/ioc_threat_hunt/ioc_hunt_report.ipynb
@@ -32,7 +32,7 @@
     "from taegis_magic.pandas.ioc import is_domain, is_hash, is_ip_address\n",
     "from taegis_magic.pandas.utils import default_schema_columns, groupby\n",
     "\n",
-    "from IPython.display import display_markdown \n",
+    "from IPython.display import display_markdown\n",
     "\n",
     "log = logging.getLogger(__name__)\n",
     "\n",
@@ -51,37 +51,40 @@
    "outputs": [],
    "source": [
     "def generate_query(value: str, date: str, event_type: str) -> str:\n",
-    "    earliest = datetime.strptime(date, \"%Y%m%d\").strftime('%Y-%m-%dT00:00:00Z')\n",
-    "    latest = datetime.strptime(date, \"%Y%m%d\").strftime('%Y-%m-%dT23:59:59Z')\n",
+    "    earliest = datetime.strptime(date, \"%Y%m%d\").strftime(\"%Y-%m-%dT00:00:00Z\")\n",
+    "    latest = datetime.strptime(date, \"%Y%m%d\").strftime(\"%Y-%m-%dT23:59:59Z\")\n",
     "\n",
     "    if is_hash(value):\n",
-    "        logical_type = 'hash'\n",
+    "        logical_type = \"hash\"\n",
     "    elif is_domain(value):\n",
-    "        logical_type = 'domain'\n",
+    "        logical_type = \"domain\"\n",
     "    elif is_ip_address(value):\n",
-    "        logical_type = 'ip'\n",
+    "        logical_type = \"ip\"\n",
     "    else:\n",
     "        log.error(f\"Unsupported logical type for value: {value}\")\n",
-    "        return 'Error'\n",
+    "        return \"Error\"\n",
     "\n",
-    "    query = dedent(f\"\"\"\n",
+    "    query = dedent(\n",
+    "        f\"\"\"\n",
     "    FROM {event_type}\n",
     "    WHERE @{logical_type} = '{value}'\n",
     "    EARLIEST='{earliest}' LATEST='{latest}'\n",
-    "    \"\"\".strip())\n",
+    "    \"\"\".strip()\n",
+    "    )\n",
     "    return query\n",
+    "\n",
     "\n",
     "indicators_by_type = {}\n",
     "for indicator in INDICATORS or []:\n",
-    "    indicator['query'] = generate_query(\n",
-    "        value=indicator['matching_value'],\n",
-    "        date=indicator['date'],\n",
-    "        event_type=indicator['event_type'],\n",
+    "    indicator[\"query\"] = generate_query(\n",
+    "        value=indicator[\"matching_value\"],\n",
+    "        date=indicator[\"date\"],\n",
+    "        event_type=indicator[\"event_type\"],\n",
     "    )\n",
-    "    if indicator['event_type'] not in indicators_by_type:\n",
-    "        indicators_by_type[indicator['event_type']] = []\n",
-    "    if indicator['query'] != 'Error':\n",
-    "        indicators_by_type[indicator['event_type']].append(indicator)"
+    "    if indicator[\"event_type\"] not in indicators_by_type:\n",
+    "        indicators_by_type[indicator[\"event_type\"]] = []\n",
+    "    if indicator[\"query\"] != \"Error\":\n",
+    "        indicators_by_type[indicator[\"event_type\"]].append(indicator)"
    ]
   },
   {
@@ -103,7 +106,7 @@
    "source": [
     "display_markdown(\"List of Indicators:\", raw=True)\n",
     "\n",
-    "for ioc in {indicator['matching_value'] for indicator in (INDICATORS or [])}:\n",
+    "for ioc in {indicator[\"matching_value\"] for indicator in (INDICATORS or [])}:\n",
     "    display_markdown(f\"- {ioc}\", raw=True)"
    ]
   },
@@ -118,28 +121,34 @@
     "for event_type, indicators in indicators_by_type.items():\n",
     "    display_markdown(f\"### Searching {event_type} indicators:\", raw=True)\n",
     "    for indicator in indicators:\n",
-    "        display_markdown(f\"Search criteria: {indicator['date']} - {indicator['matching_value']}\", raw=True)\n",
-    "        query = indicator['query']\n",
+    "        display_markdown(\n",
+    "            f\"Search criteria: {indicator['date']} - {indicator['matching_value']}\",\n",
+    "            raw=True,\n",
+    "        )\n",
+    "        query = indicator[\"query\"]\n",
     "        %taegis --verbose events search --tenant $TENANT_ID --region $REGION --assign results --cell \"$query\" --track --cache\n",
-    "    \n",
+    "\n",
     "        if event_type not in results_dfs:\n",
     "            results_dfs[event_type] = results\n",
     "        else:\n",
-    "            results_dfs[event_type] = pd.concat([\n",
+    "            results_dfs[event_type] = pd.concat(\n",
+    "                [\n",
     "                    results_dfs[event_type],\n",
     "                    results,\n",
     "                ]\n",
     "            ).reset_index(drop=True)\n",
-    "        \n",
+    "\n",
     "        display_markdown(\"<br/>\", raw=True)\n",
     "\n",
     "    display_markdown(f\"#### Top 20 {event_type} results:\", raw=True)\n",
-    "    display_markdown(groupby(\n",
-    "        results_dfs[event_type], \n",
-    "        columns=default_schema_columns(event_type)\n",
-    "        ).sort_values(by=\"count\", ascending=False).head(20).to_html(), \n",
-    "        raw=True)\n",
-    "    display_markdown(\"<br/>\", raw=True)\n"
+    "    display_markdown(\n",
+    "        groupby(results_dfs[event_type], columns=default_schema_columns(event_type))\n",
+    "        .sort_values(by=\"count\", ascending=False)\n",
+    "        .head(20)\n",
+    "        .to_html(),\n",
+    "        raw=True,\n",
+    "    )\n",
+    "    display_markdown(\"<br/>\", raw=True)"
    ]
   },
   {
