--- a/examples/ioc_threat_hunt/ioc_threat_hunt.ipynb
+++ b/examples/ioc_threat_hunt/ioc_threat_hunt.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "region = 'charlie' # authentication region, does not limit regions for tenant queries\n",
+    "region = \"charlie\"  # authentication region, does not limit regions for tenant queries\n",
     "organization_id = None\n",
     "tenant_ids = None\n",
     "services = None\n",
@@ -20,7 +20,7 @@
     "ioc_file = None\n",
     "iocs = None\n",
     "days = 30\n",
-    "TAEGIS_MAGIC_NOTEBOOK_FILENAME = None\n"
+    "TAEGIS_MAGIC_NOTEBOOK_FILENAME = None"
    ]
   },
   {
@@ -39,7 +39,7 @@
     "    raise ValueError(\"Either 'ioc_file' or 'iocs' must be provided.\")\n",
     "\n",
     "if days < 1:\n",
-    "    raise ValueError(\"'days' must be at least 1.\")\n"
+    "    raise ValueError(\"'days' must be at least 1.\")"
    ]
   },
   {
@@ -53,10 +53,11 @@
     "\n",
     "import logging\n",
     "from taegis_magic.core.log import get_module_logger, TRACE_LOG_LEVEL\n",
+    "\n",
     "logger = get_module_logger()\n",
     "logger.setLevel(logging.INFO)\n",
     "log = logging.getLogger(__name__)\n",
-    "    \n",
+    "\n",
     "from pathlib import Path\n",
     "from textwrap import dedent\n",
     "from datetime import datetime, timezone\n",
@@ -117,7 +118,7 @@
     "if services:\n",
     "    for service in services:\n",
     "        tenants_search_filters.append(f\"--filter-by-service {service}\")\n",
-    "tenants_search_filter = ' '.join(tenants_search_filters)\n",
+    "tenants_search_filter = \" \".join(tenants_search_filters)\n",
     "tenants_search_filter"
    ]
   },
@@ -141,9 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tenants = tenants[tenants['id'] != organization_id]\n",
-    "tenants['first_environment'] = tenants.pipe(lookup_first_environment)\n",
-    "tenants[['id', 'name', 'first_environment']]"
+    "tenants = tenants[tenants[\"id\"] != organization_id]\n",
+    "tenants[\"first_environment\"] = tenants.pipe(lookup_first_environment)\n",
+    "tenants[[\"id\", \"name\", \"first_environment\"]]"
    ]
   },
   {
@@ -153,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for id_, environment in tenants[['id', 'first_environment']].itertuples(index=False):\n",
+    "for id_, environment in tenants[[\"id\", \"first_environment\"]].itertuples(index=False):\n",
     "    print(f\"Tenant ID: {id_}, Environment: {environment}\")"
    ]
   },
@@ -202,7 +203,9 @@
    "source": [
     "indicators_template = \"\\n\".join([f\"- {ioc}\" for ioc in iocs])\n",
     "\n",
-    "Path(\"null_findings.report.md\").write_text(dedent(f\"\"\"\n",
+    "Path(\"null_findings.report.md\").write_text(\n",
+    "    dedent(\n",
+    "        f\"\"\"\n",
     "# IoC Hunt Report\n",
     "                                                  \n",
     "{description}\n",
@@ -213,7 +216,9 @@
     "## Summary of Findings\n",
     "\n",
     "No indicators of compromise were found in the last {days} days.\n",
-    "\"\"\"))"
+    "\"\"\"\n",
+    "    )\n",
+    ")"
    ]
   },
   {
